Version 2.2.0
~~~~~~~~~~~~~
* Post DiFX-2.1
* vexpeek: --bands mode

Version 2.1.0
~~~~~~~~~~~~~
* Version number change prior to DiFX-2.1
* Allowed zoom bands to be used with profile mode also
* Version for DiFX-2.1, May 14, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Post DiFX 2.0.1
* Bug fix: when sorting events, round to nearest 0.1 second
* Bug fix: order of operations in computing zoom channels: don't overflow integers
* Change parameters to be better optimized for larger bandwidths (at marginal, if any, impact to small bandwidths)
* Reimplement tweak integration time
* Fix zoom bands when statting with different bandwidths.  WFB gets a beer for this one!
* Start implementation of "global zoom bands" which can either be referenced from an ANTENNA or a SETUP
* Distinction between recorded and non-recorded channels is now more clear.  Only recorded channels will be correlated.
* No more VexFormat class.  Its contents were moved into VexSetup.
* vex2script: better job allocating RDBE personality and choosing whether or not to record
* set xmacLength and strideLength automatically for powers of 2 and powers of 5 FFT sizes
* Can set up "fake" correlations

Version 2.0.1
~~~~~~~~~~~~~
* add -v option to vexpeek
* move most strcpy to snprintf and make use of parameterized string lengths in difxio
* add recordEnable map to VexScan.
* fix back-to-back scan handling when singleScan = False
* fix media changes that occur immediately before a scan change
* don't error-out if an ANTENNA block does not correspond to an entry in antennas list
* Follow refs to CLOCK entries; fall back on unreffed clocks only if no other clocks found first
* Follow refs to TAPELOG_OBS entries; fall back on unreffed VSNs only if no other VSNs found first
* Support proper vex epoch for SITE; allow mjd to continue to work
* Generalize vexDate just a bit to allow for the posibility of vexdate without all date fields
* Add sampling parameter to ANTENNA confuration